--- a/style_index.css
+++ b/style_index.css
@@ -29,18 +29,17 @@
   font-weight: bold;
 }
 
-
-#content {
-
-}
-
 .classifieds {
-  margin-left: 270px;
   clear: right;
 }
 
-.classifieds h1 {
-  margin-bottom: 0;
+.classifieds table {
+  text-align: center;
+}
+
+.small {
+  text-align: right;
+  font-style: italic;
 }
 
 .category {
@@ -53,11 +52,11 @@
 
 .ad {
   margin: 10px;
-  width: 30%;
+  width: 31.2%;
   display: inline;
   border: 1px solid black;
   float: left;
-  height: 250px;
+  height: 58px;
   text-align: center;
   box-shadow: 5px 5px 10px;
   border-radius: 5px;
@@ -78,32 +77,6 @@
   margin: 10px auto;
 }
 
-#menu {
-  width: 250px;
-  float: left;
-  border: 1px solid #414354;
-  margin: 0 5px;
-  position: relative;
-}
-
-#menu a {
-  color: white;
-  font-weight: bold;
-}
-
-.menu{
-  border: 1px solid #414354;
-  background-color: #546AFF;
-  padding: 14px 0 14px 60px;
-  font-size: 14px;
-}
-
-.menu:hover{
-  border: 1px solid #FFF;
-  background-color: #2A357F;
-}
-
-
 #footer{
   color: #FFF;
   text-align: center;
@@ -122,8 +95,8 @@
   clear: both;
 }
 
-h4 {
-  margin-top: 0px;
+h2 {
+  text-align: center;
 }
 
 a {
